Update shipped start scripts. Add a powershell one as an alternative to CMD, since I don't feel like learning cmd. Make the install step actually work